AC_INIT([accountit], [0.1], [calmcl1@aol.com])  # Initialize and specify package, version and contact address
AC_PREREQ([2.69])   # Minimum Automake version
AC_CONFIG_HEADERS([config.h]) # Generates C preprocessor directives header

AM_INIT_AUTOMAKE([-Wall -Werror foreign])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for header files.
AC_CHECK_HEADERS([string.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
